# loraforge

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
design/: mockup.html
desktop/: Cargo.toml
desktop/pages/: error.html  index.html
desktop/sidecar/: Cargo.toml
desktop/sidecar/src/: lib.rs
desktop/sidecar/tests/: lifecycle.rs
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
docs/: decisions.md
docs/design/: tauri-shell.md
examples/recipes/: sdxl-character-12gb.yaml
src/loraforge/: cli.py  downloader.py  probe.py
src/loraforge/capability/: matrix.yaml  resolver.py
src/loraforge/datasets/: captioner.py  library.py
src/loraforge/engines/: base.py  bootstrap.py  kohya.py
src/loraforge/jobs/: runner.py  stepdown.py
src/loraforge/recipes/: schema.py
src/loraforge/server/: app.py  downloads.py  run.py  schemas.py  security.py
tests/: test_bootstrap.py  test_capability.py  test_datasets.py  test_downloader.py  test_job_runner.py  test_kohya_adapter.py  test_server.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  api.ts  jobView.test.ts  jobView.ts  recipe.test.ts  recipe.ts  styles.css
ui/src/sections/: Configure.tsx  Dataset.tsx  Diagnose.tsx  Finish.tsx  Model.tsx  Train.tsx
